--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "which": "^1.0.5",
     "express": "^4.0.0",
     "findit": "^1.1.1"
+  },
+  "devDependencies": {
+    "lab": "^3.1.1",
+    "supertest": "^0.12.0",
+    "async": "^0.8.0",
+    "walkdir": "0.0.7"
   }
 }
