--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pty.js": "^0.2.4",
     "which": "^1.0.5",
     "express": "^4.0.0",
-    "findit": "^1.1.1"
+    "findit": "^1.1.1",
+    "rest-fs": "anandkumarpatel/rest-fs"
   },
   "devDependencies": {
     "lab": "^3.1.1",
