--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "access namespace useing nsinit",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test lab -v -c"
   },
   "repository": {
     "type": "git",
@@ -25,12 +25,15 @@
     "which": "^1.0.5",
     "express": "^4.0.0",
     "findit": "^1.1.1",
-    "rest-fs": "anandkumarpatel/rest-fs"
+    "rest-fs": "anandkumarpatel/rest-fs",
+    "http-proxy": "^1.1.2",
+    "body-parser": "^1.0.2"
   },
   "devDependencies": {
     "lab": "^3.1.1",
     "supertest": "^0.12.0",
     "async": "^0.8.0",
-    "walkdir": "0.0.7"
+    "walkdir": "0.0.7",
+    "rimraf": "^2.2.8"
   }
 }
