--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "findit": "^1.1.1",
     "rest-fs": "anandkumarpatel/rest-fs",
     "http-proxy": "^1.1.2",
-    "body-parser": "^1.0.2"
+    "body-parser": "^1.0.2",
+    "eson": "^0.5.0"
   },
   "devDependencies": {
     "lab": "^3.1.1",
