--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "access namespace useing nsinit",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test lab -v -c"
+    "test": "NODE_ENV=test lab -v -c -t 100"
   },
   "repository": {
     "type": "git",
