--- a/circle.yml
+++ b/circle.yml
@@ -7,14 +7,14 @@ dependencies:
     - "node_modules"
   override:
     - npm install
-    - 'echo "$CIRCLE_BRANCH" | grep -q -w -P "(.*chef.*)|(master)" && (bundle check --path=vendor/bundle || bundle install --path=vendor/bundle  --clean)':
+    - 'echo "$CIRCLE_BRANCH" | grep -q -w -P "(.*chef.*)|(master)" && (bundle check --path=vendor/bundle || bundle install --path=vendor/bundle  --clean) || true':
         pwd: cookbook
         timeout: 99999
-    - 'echo "$CIRCLE_BRANCH" | grep -q -w -P "(.*chef.*)|(master)" && bundle exec berks install':
+    - 'echo "$CIRCLE_BRANCH" | grep -q -w -P "(.*chef.*)|(master)" && (bundle exec berks install) || true ':
         pwd: cookbook
 test:
   override:
     - npm test
-    - 'echo "$CIRCLE_BRANCH" | grep -q -w -P "(.*chef.*)|(master)" && bundle exec rake test':
+    - 'echo "$CIRCLE_BRANCH" | grep -q -w -P "(.*chef.*)|(master)" && (bundle exec rake test) || true':
         pwd: cookbook
         timeout: 99999
