--- a/circle.yml
+++ b/circle.yml
@@ -7,14 +7,16 @@ dependencies:
     - "node_modules"
   override:
     - npm install
-    - 'echo "$CIRCLE_BRANCH" | grep -q -w -P "(.*chef.*)|(master)" && (bundle check --path=vendor/bundle || bundle install --path=vendor/bundle  --clean) || true':
+    - ruby -e 'if ENV["CIRCLE_BRANCH"] =~ /(.*chef.*)|(master)/ then exec "bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --clean" end':
         pwd: cookbook
         timeout: 99999
-    - 'echo "$CIRCLE_BRANCH" | grep -q -w -P "(.*chef.*)|(master)" && (bundle exec berks install) || true ':
+    - ruby -e 'if ENV["CIRCLE_BRANCH"] =~ /(.*chef.*)|(master)/ then exec "bundle exec berks install" end': 
         pwd: cookbook
 test:
   override:
     - npm test
-    - 'echo "$CIRCLE_BRANCH" | grep -q -w -P "(.*chef.*)|(master)" && (bundle exec rake test) || true':
+    - ruby -e 'if ENV["CIRCLE_BRANCH"] =~ /(.*chef.*)|(master)/ then exec "bundle exec rake test" end': 
         pwd: cookbook
         timeout: 99999
+  post:
+    - cp cookbook/.kitchen/logs/* $CIRCLE_ARTIFACTS
