--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.0.0",
     "rest-fs": "0.1.2",
     "body-parser": "^1.0.2",
-    "eson": "^0.5.0"
+    "eson": "^0.5.0",
+    "dotenv": "^0.4.0"
   },
   "devDependencies": {
     "lab": "^3.1.1",
