--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "krain",
   "version": "0.0.4",
   "description": "access namespace useing nsinit",
-  "main": "index.js",
+  "main": "./lib/app.js",
   "scripts": {
     "test": "NODE_ENV=test lab -v -c -t 100",
     "start": "node index.js"
@@ -24,17 +24,17 @@
   },
   "homepage": "https://github.com/anandkumarpatel/krain",
   "dependencies": {
-    "express": "^4.0.0",
+    "express": "4.7.3",
     "rest-fs": "0.1.3",
-    "body-parser": "^1.0.2",
-    "eson": "^0.5.0",
-    "dotenv": "^0.4.0"
+    "body-parser": " 1.5.2",
+    "eson": "0.5.0",
+    "dotenv": "0.4.0"
   },
   "devDependencies": {
-    "lab": "^3.1.1",
-    "supertest": "^0.12.0",
-    "async": "^0.8.0",
-    "walkdir": "0.0.7",
-    "rimraf": "^2.2.8"
+    "lab": "*",
+    "supertest": "*",
+    "async": "*",
+    "walkdir": "*",
+    "rimraf": "*"
   }
 }
