--- a/package.json
+++ b/package.json
@@ -25,13 +25,11 @@
   "homepage": "https://github.com/anandkumarpatel/krain",
   "dependencies": {
     "express": "4.7.3",
-    "rest-fs": "0.1.7",
+    "rest-fs": "0.1.9",
     "body-parser": "1.5.2",
     "eson": "0.5.0",
     "dotenv": "0.4.0",
-    "request": "^2.40.0",
-    "dat-middleware": "^1.8.1",
-    "middleware-flow": "^0.5.1"
+    "request": "^2.40.0"
   },
   "devDependencies": {
     "lab": "*",
