--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   },
   "homepage": "https://github.com/anandkumarpatel/krain",
   "dependencies": {
-    "express": "4.7.3",
-    "rest-fs": "0.1.9",
+    "101": "^0.7.2",
     "body-parser": "1.5.2",
-    "eson": "0.5.0",
     "dotenv": "0.4.0",
-    "request": "^2.40.0"
+    "eson": "0.5.0",
+    "exec-sync": "^0.1.6",
+    "express": "4.7.3",
+    "request": "^2.40.0",
+    "rest-fs": "0.1.9",
+    "rollbar": "^0.4.0"
   },
   "devDependencies": {
     "lab": "*",
