--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "homepage": "https://github.com/anandkumarpatel/krain",
   "dependencies": {
-    "express": "4.7.3",
-    "rest-fs": "0.1.10",
     "body-parser": "1.5.2",
-    "eson": "0.5.0",
+    "debug": "^2.1.1",
     "dotenv": "0.4.0",
-    "request": "^2.40.0"
+    "eson": "0.5.0",
+    "express": "4.7.3",
+    "request": "^2.40.0",
+    "rest-fs": "0.1.10"
   },
   "devDependencies": {
     "lab": "4.1.0",
