Make the request fetch the location of the container's file dir from a file in the old container dir location

--- a/configs/.env.default
+++ b/configs/.env.default
@@ -1,4 +1,5 @@
 FS_POSTFIX="/"
-FS_ROOT="/docker/aufs/mnt"
+FS_ID_FILE_ROOT="/docker/aufs/%%CONTAINERID%%/id-file"
+FS_ROOT="/docker/image/aufs/layerdb/mounts"
 PORT=3100
 UPLOAD_PARSER_LIMIT=10mb
