--- a/configs/.env.test
+++ b/configs/.env.test
@@ -1,4 +1,4 @@
-FS_ROOT="{ROOT_DIR}/test"
-FS_ID_FILE_ROOT="{ROOT_DIR}/test/%%CONTAINERID%%/mount-id"
+FS_ROOT="~/runnable/krain/test"
+FS_ID_FILE_ROOT="~/runnable/krain/test/%%CONTAINERID%%/mount-id"
 FS_POSTFIX="/"
 PORT=5000
