--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "krain",
+  "name": "@runnable/krain",
   "version": "0.3.1",
   "description": "access namespace useing nsinit",
   "main": "./lib/app.js",
